# NASTRAN95

./: .gitignore  .travis.yml  AUTHORS  COPYING  Makefile.am  Makefile.in  NASTRAN Users Manual 2.txt  README  README.md  bootstrap  configure  configure.ac
bd/: .gitignore  Makefile.am  Makefile.in
debian/: .gitignore  changelog  control  copyright  install  nastran.dirs  nastran.manpages  rules
debian/patches/: nastran-main-script.diff  series
inp/: Makefile.am  Makefile.in  d02022a.sh  d02023a.sh  d02024a.sh  d02025a.sh  d02026a.sh  d02027a.sh  d02032a.sh  d02033a.sh  d02034a.sh  d02035a.sh  d02036a.sh  testrunner.sh  truss.sof  windmill.sof
man/: Makefile.am  Makefile.in  nastran.1
mds/: .gitignore  Makefile.am  Makefile.in  PAKBLK.COM  bckrec.f  bldpk.f  bldpki.f  bldpkn.f  bpack.f  btstrp.f  bufchk.f  bunpak.f  bunpk.f  close.f  corwds.f  cputim.f  dbmalb.f  dbmdfc.f  dbmdia.f  dbmdmp.f  dbmfdp.f  dbmint.f  dbmio.f  dbmlbk.f  dbmmov.f  dbmnam.f  dbmrel.f  dbmrlb.f  dbmsrf.f  dbmstf.f  delscr.f  dmpmat.f  dsblpk.f  dsbpnk.f  dsbrc1.f  dsclos.f  dsefwr.f  dsfwr1.f  dsgefl.f  dsgncl.f  (+78 more)
mis/: .gitignore  Makefile.am  Makefile.in  conmsg.f  endsys.f  ofp.f  open.f  pexit.f  plbar1.f  ploadx.f  rfopen.f  semint.f  smc2cd.f  smc2cs.f  smc2rd.f  smc2rs.f  sofut.f  trd1e.f  ttlpge.f  xsem00.f
test/: Makefile.am  Makefile.in  bar.inp  beam.inp  beam_hex.inp  testrunner.sh
um/: .gitignore  Makefile.am  Makefile.in
utility/: chkfil.f
