# what flags you want to pass to the Fortran compiler & linker
FFLAGS = -g -w -fno-range-check -fno-automatic -fcray-pointer -std=legacy

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
noinst_LIBRARIES = libnastbd.a
libnastbd_a_SOURCES = dpdcbd.f  gptabd.f  ifx4bd.f  of1pbd.f	of5pbd.f  of9pbd.f  pla4bd.f  sma1bd.f \
exiobd.f  ifp3bd.f  ifx5bd.f  of2pbd.f	of6pbd.f  ofp1bd.f  plotbd.f  sma2bd.f \
ferfbd.f  ifx1bd.f  ifx6bd.f  of3pbd.f	of7pbd.f  ofp5bd.f  readbd.f  ta1abd.f \
flbbd.f   ifx2bd.f  ifx7bd.f  of3sbd.f	of7sbd.f  ofsnbd.f  sdr2bd.f  tabfbd.f \
gp3bd.f   ifx3bd.f  itembd.f  of4pbd.f	of8pbd.f  ofssbd.f  semdbd.f  vdrbd.f
