TESTS = d01000a.inp d01001a.inp d01002a.inp d01011a.inp d01011b.inp d01011c.inp \
d01012a.inp d01013a.inp d01014a.inp d01021a.inp d01021b.inp d01031a.inp \
d01032a.inp d01033a.inp d01034a.inp d01041a.inp d01051a.inp d01061a.inp \
d01062a.inp d01071a.inp d01081a.inp d01091a.inp d01092a.inp d01101a.inp \
d01111a.inp d01112a.inp d01121a.inp d01122a.inp d01131a.inp d01132a.inp \
d01133a.inp d01141a.inp d01151a.inp d01161a.inp d01171a.inp d02011a.inp \
d02021a.inp d02022a.sh d02023a.sh d02024a.sh d02025a.sh d02026a.sh \
d02027a.sh d02031a.inp d02032a.sh d02033a.sh d02034a.sh d02035a.sh \
d02036a.sh d03011a.inp d03012a.inp d03013a.inp d03014a.inp d03021a.inp \
d03031a.inp d03041a.inp d03051a.inp d03061a.inp d03071a.inp d03081a.inp \
d03082a.inp d03083a.inp d04011a.inp d05011a.inp d05021a.inp d06011a.inp \
d07011a.inp d07012a.inp d07021a.inp d07022a.inp d08011a.inp d08012a.inp \
d08013a.inp d08014a.inp d09011a.inp d09021a.inp d09022a.inp d09031a.inp \
d09041a.inp d10011a.inp d10021a.inp d10022a.inp d10023a.inp d11011a.inp \
d11011b.inp d11021a.inp d11022a.inp d11031a.inp d11032a.inp d12011a.inp \
d13011a.inp d14011a.inp d15011a.inp t00001a.inp t01181a.inp t01191a.inp \
t01201a.inp t01211a.inp t01221a.inp t01231a.inp t01241a.inp t01251a.inp \
t01261a.inp t01271a.inp t01281a.inp t01291a.inp t01301a.inp t01311a.inp \
t01321a.inp t01331a.inp t01341a.inp t03091a.inp t03101a.inp t03111a.inp \
t03111b.inp t03121a.inp t03121b.inp t03121c.inp t03131a.inp t04021a.inp \
t04021b.inp t05031a.inp t08021a.inp t08022a.inp t08031a.inp t09051a.inp \
t09061a.inp t09071a.inp t13021a.inp t13022a.inp t16011a.inp t17011a.inp \
d01011b.inp d01011c.inp d01021b.inp d01151a.inp d01161a.inp \
d02024a.sh d02025a.sh \
d02026a.sh d02027a.sh \
d02033a.sh d03011a.inp d03012a.inp \
d03013a.inp d03014a.inp d03041a.inp d05011a.inp d11011b.inp \
d12011a.inp t00001a.inp t01271a.inp t03111a.inp t03111b.inp \
t03121a.inp t03121b.inp t03121c.inp t03131a.inp t04021b.inp \
t08021a.inp t08022a.inp t08031a.inp t09071a.inp t16011a.inp 

TEST_EXTENSIONS = .inp

INP_LOG_COMPILER = ./testrunner.sh

clean-local:
	-rm -f *.out *.in12 *.out11 *.out15 *.nptp *.plt *.plt1 *.plt2 *.pnh *.log *.inp.sof1 *.inp.sof2 *.15 *.16 *.76
