# what flags you want to pass to the Fortran compiler & linker
FFLAGS = -g -w -fno-range-check -fno-automatic -fcray-pointer -std=legacy

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
noinst_LIBRARIES = libnastran.a
libnastran_a_SOURCES = a42a8.f   crspld.f  ferrdm.f  initl2.f	mxcids.f   read1.f    strax3.f \
a82int.f  crspls.f  ferswd.f  initl.f	na12a8.f   read2.f    strbs1.f \
adr.f	  crsub.f   fersws.f  inptt1.f	na12if.f   read3.f    stri31.f \
adri.f	  csqrtx.f  ferxtd.f  inptt2.f	nascar.f   read4.f    stri32.f \
adrprt.f  csub.f    ferxts.f  inptt3.f	norm11.f   read6.f    strir1.f \
af.f	  csumm.f   ff100.f   inptt4.f	norm1.f    read7.f    strir2.f \
ai.f	  cthmck.f  ffhelp.f  inptt5.f	normal.f   readbd.f   strm61.f \
ais.f	  ctrnsp.f  ffread.f  input4.f	nrlsum.f   reduce.f   strm62.f \
akapm.f   curcas.f  filcor.f  input.f	nsinfo.f   redu.f     strme1.f \
akappa.f  curv1.f   filswi.f  insert.f	number.f   reig.f     strnam.f \
akp2.f	  curv2.f   findc.f   int2a8.f	numtyp.f   relabl.f   strp11.f \
alamda.f  curv3.f   finder.f  int2al.f	odum.f	   remflx.f   strp12.f \
alg01.f   curv.f    find.f    intert.f	odumx.f    rename.f   strpl1.f \
alg02.f   curvit.f  flbbd.f   intfbs.f	of1pbd.f   retblk.f   strpts.f \
alg03.f   curvps.f  flbelm.f  intlst.f	of2pbd.f   rfopen.f   strqd1.f \
alg04.f   cxloop.f  flbema.f  intprt.f	of3pbd.f   rforce.f   strqd2.f \
alg05.f   cxtrny.f  flbemg.f  intvec.f	of3sbd.f   rmg.f      strscn.f \
alg06.f   cyct1.f   flbmg.f   inverd.f	of4pbd.f   rodd.f     strsl1.f \
alg07.f   cyct2a.f  flbprt.f  invers.f	of5pbd.f   rod.f      strsl2.f \
alg08.f   cyct2b.f  flbset.f  invert.f	of6pbd.f   rods.f     strslv.f \
alg09.f   cyct2.f   flface.f  invfbs.f	of7pbd.f   rombdk.f   stube1.f \
alg10.f   dadd5.f   flfree.f  invp1.f	of7sbd.f   romber.f   sub1.f \
alg11.f   dadd.f    flld.f    invp2.f	of8pbd.f   rombsk.f   suba.f \
alg12.f   dadotb.f  flunam.f  invp3.f	of9pbd.f   rotate1.f  subbb.f \
alg13.f   dapoly.f  fmdi.f    invpwr.f	ofcomp.f   rotate.f   subb.f \
alg14.f   daxb.f    fname.f   invtr.f	ofp1a.f    rotat.f    subcc.f \
alg15.f   dbar.f    fndgrd.f  is2d8d.f	ofp1bd.f   rowdyz.f   subc.f \
alg16.f   dbase.f   fndiam.f  is2d8s.f	ofp1b.f    rsetup.f   sub.f \
alg17.f   dcone.f   fndlvl.f  isft.f	ofp1c.f    rsort.f    subi.f \
alg18.f   dcross.f  fndnxl.f  itcode.f	ofp1.f	   ruler.f    subpb.f \
alg19.f   ddamat.f  fndpar.f  itembd.f	ofp5bd.f   rzintd.f   subp.f \
alg1.f	  ddampg.f  fndplt.f  itmprt.f	ofpcc1.f   rzints.f   subph1.f \
alg25.f   ddcmps.f  fndpnt.f  ittype.f	ofpcc2.f   sadd.f     summ.f \
alg26.f   ddcomp.f  fndset.f  iunion.f	ofpcf1.f   sadotb.f   sumphi.f \
alg29.f   ddr1a.f   fnxt.f    jacob2.f	ofpcf2.f   sanorm.f   suplt.f \
alg2.f	  ddr1b.f   fnxtvc.f  jacobs.f	ofpcs1.f   saxb.f     suread.f \
alg30.f   ddr1.f    fnxtvd.f  kbar.f	ofpcs2.f   saxif1.f   suwrt.f \
alg3.f	  ddr2.f    fnxtv.f   kcone2.f	ofp.f	   saxif2.f   switch.f \
alg4.f	  ddr.f     forfil.f  kconed.f	ofpgpw.f   sbar1.f    sxloop.f \
alg5.f	  ddrmm1.f  form12.f  kcones.f	ofpmis.f   sbar2.f    symbol.f \
alg6.f	  ddrmm2.f  form1.f   kdumx.f	ofppnt.f   sbspl2.f   t3bgbs.f \
alg7.f	  ddrmma.f  form22.f  kelas.f	ofppun.f   scalar.f   t3bmgd.f \
alg8.f	  ddrmm.f   form2.f   kelbow.f	ofprf1.f   scaled.f   t3bmgs.f \
alg9.f	  ddrmmp.f  format.f  kflud2.f	ofprf2.f   scalex.f   t3gemd.f \
algan.f   ddrmms.f  formg2.f  kflud3.f	ofprs1.f   scan.f     t3gems.f \
algap.f   ddumx.f   formgg.f  kflud4.f	ofprs2.f   scat.f     t3pl4d.f \
algar.f   decode.f  fornam.f  khrfn2.f	ofpsn1.f   sce1.f     t3pl4s.f \
alg.f	  decomp.f  fornum.f  khrfn3.f	ofpss1.f   scheme.f   t3setd.f \
algpb.f   degree.f  fpont.f   khrfn5.f	ofrf2s.f   scone1.f   t3sets.f \
algpo.f   delete.f  fqrw.f    kompnt.f	ofrs2s.f   scone2.f   ta1abd.f \
algpr.f   delkls.f  fqrwv.f   korsz.f	ofsnbd.f   scone3.f   ta1a.f \
allmat.f  delset.f  frbk2.f   kpanel.f	ofsplt.f   scrlm.f    ta1b.f \
amatrx.f  deltkl.f  frbk.f    kpltst.f	ofssbd.f   sd2rhd.f   ta1ca.f \
amgb1a.f  desvel.f  frd2a.f   kqdmem.f	oldel1.f   sdcin.f    ta1c.f \
amgb1b.f  detck.f   frd2b.f   kqdplt.f	oldel2.f   sdcins.f   ta1cpd.f \
amgb1c.f  detckx.f  frd2c.f   krod.f	oldel3.f   sdcmm.f    ta1cps.f \
amgb1d.f  detdet.f  frd2d.f   krshft.f	olplot.f   sdcmps.f   ta1etd.f \
amgb1.f   detfbs.f  frd2e.f   kslot.f	onetwo.f   sdcmq.f    ta1.f \
amgb1s.f  detgbs.f  frd2f.f   ksolid.f	onlins.f   sdcom1.f   ta1h.f \
amgb2a.f  detm1.f   frd2i.f   ktetra.f	open.f	   sdcom2.f   tabfbd.f \
amgb2.f   detm3.f   fread.f   ktrapr.f	opt2a.f    sdcom3.f   tabfmt.f \
amgbfs.f  detm4.f   frlga.f   ktrbsc.f	opt2b.f    sdcom4.f   table5.f \
amg.f	  detm5.f   frlgb.f   ktriqd.f	opt2c.f    sdcomp.f   tablev.f \
amgrod.f  detm.f    frlg.f    ktrirg.f	opt2d.f    sdcompx.f  tabpch.f \
amgsba.f  dfbs.f    frmax.f   ktrm6d.f	optp1a.f   sdcout.f   tabprt.f \
amgt1a.f  dgree.f   frmlta.f  ktrm6s.f	optp1b.f   sdhtf1.f   tabpt.f \
amgt1b.f  diag36.f  frmltd.f  ktrmem.f	optp1c.f   sdhtf2.f   tapbit.f \
amgt1c.f  diagon.f  frmlt.f   ktrpld.f	optp1d.f   sdhtff.f   termsd.f \
amgt1d.f  diam.f    frmltx.f  ktrpls.f	optpr1.f   sdr1a.f    termss.f \
amgt1.f   dihex.f   frr1a1.f  ktrplt.f	optpr2.f   sdr1b.f    tetra.f \
amgt1s.f  dipole.f  frrd1c.f  ktshld.f	optpx1.f   sdr1.f     tiger.f \
amgt1t.f  dis2d8.f  frrd1d.f  ktshls.f	optpx.f    sdr2aa.f   timal3.f \
amgt2a.f  displa.f  frrd1f.f  ktube.f	order.f    sdr2a.f    timeeq.f \
amgt2.f   dist.f    frrd2.f   lamx.f	ortck.f    sdr2bd.f   timts1.f \
ampa.f	  dk100.f   frrd.f    line10.f	ortho.f    sdr2b.f    timts2.f \
ampb1.f   dk211.f   frsw2.f   line.f	oscxrf.f   sdr2c.f    timtst.f \
ampb2.f   dk89.f    frsw.f    linein.f	outmsc.f   sdr2d.f    tipe.f \
ampb.f	  dki.f     ftube.f   linel.f	outpak.f   sdr2e.f    tis2d8.f \
ampc1.f   dkint.f   fvrs1a.f  linkup.f	outpt1.f   sdr2.f     tker.f \
ampc2.f   dkl.f     fvrs1b.f  loadsu.f	outpt2.f   sdr3a.f    tktztk.f \
ampc.f	  dkls.f    fvrs1c.f  locpt.f	outpt3.f   sdr3.f     tldrs.f \
ampd.f	  dlamby.f  fvrs1d.f  lodapp.f	outpt4.f   sdrchk.f   tlodm6.f \
ampe.f	  dlamg.f   fvrs1e.f  logfil.f	outpt5.f   sdretd.f   tlodsl.f \
amp.f	  dlbpt2.f  fvrs2a.f  loglog.f	outpt.f    sdrht.f    tlodt1.f \
ampf.f	  dlkapm.f  fvrst1.f  lprops.f	page2.f    sdumx1.f   tlodt2.f \
angtrs.f  dloop.f   fvrst2.f  lsplin.f	page.f	   sdumx2.f   tlodt3.f \
anisop.f  dlpt2.f   fwmw.f    machck.f	pakcol.f   seemat.f   tlqd4d.f \
apd12.f   dmatrs.f  fzy2.f    magbdy.f	param.f    selas1.f   tlqd4s.f \
apd1.f	  dmatrx.f  gauss2.f  magpha.f	paraml.f   selas2.f   tltr3d.f \
apd2.f	  dmfgr.f   gauss.f   makmcb.f	partn1.f   selbo1.f   tltr3s.f \
apd3.f	  dmpalt.f  geloop.f  mapset.f	partn2.f   selbo2.f   tmtogo.f \
apd4.f	  dmpfil.f  gencos.f  maskn.f	partn3.f   selcam.f   tmtsio.f \
apd5.f	  dmpyad.f  gend.f    masstq.f	partn.f    semdbd.f   tmtslp.f \
apdb1.f   dmpy.f    gendsb.f  matck.f	pcoord.f   semint.f   tmtsot.f \
apdb2a.f  dnorm.f   genpar.f  matdum.f	permut.f   seteq.f    tordrd.f \
apdb2.f   dpd1.f    genvec.f  matgen.f	perpec.f   setfnd.f   tordrs.f \
apdb.f	  dpd2.f    getblk.f  matgpr.f	pexit.f    setig.f    totape.f \
apdcs.f   dpd3.f    getdef.f  matprn.f	phdmia.f   setinp.f   tpztem.f \
apd.f	  dpd4.f    gfbs.f    matprt.f	pidck.f    setlvl.f   tquads.f \
apdf.f	  dpd5.f    gfscom.f  matvc2.f	piklvl.f   setval.f   traile.f \
apdoe.f   dpdaa.f   gfsdir.f  matvec.f	pkbar.f    sfarea.f   trail.f \
apdr.f	  dpdcbd.f  gfshc.f   matwrt.f	pkqad1.f   sfetch.f   tranem.f \
area.f	  dpd.f     gfsh.f    maxdgr.f	pkqad2.f   sgena.f    tranp1.f \
arrm.f	  dplot.f   gfsma.f   mbamg.f	pkqdm1.f   sgenb.f    transp.f \
ascm01.f  dpltst.f  gfsmo2.f  mbbslj.f	pkqdm.f    sgen.f     trapad.f \
ascm02.f  dppsb.f   gfsmod.f  mbcap.f	pkqdms.f   sgenm.f    trapax.f \
ascm03.f  dpps.f    gfsmrg.f  mbctr.f	pkqdpl.f   shape.f    trbscd.f \
ascm04.f  dpse2.f   gfsmt.f   mbdpdh.f	pkrod.f    shcsgd.f   trbsc.f \
ascm05.f  dpse3.f   gfsptn.f  mbgae.f	pktq1.f    shctsd.f   trbscs.f \
ascm06.f  dpse4.f   gfsspc.f  mbgate.f	pktq2.f    shctss.f   trd1a2.f \
ascm07.f  dpzy.f    gfstrn.f  mbgaw.f	pktrbs.f   sheard.f   trd1a.f \
ascm08.f  dqdmem.f  gfswch.f  mbgeod.f	pktri1.f   shears.f   trd1c2.f \
ascm09.f  dquad.f   gibstk.f  mbmode.f	pktri2.f   shfors.f   trd1c.f \
ascm10.f  draw.f    gi.f      mbplot.f	pktrm1.f   shgmgd.f   trd1d2.f \
ascm11.f  drkapm.f  giggks.f  mbprit.f	pktrm.f    shgmgs.f   trd1d.f \
ascm12.f  drod.f    gigtka.f  mbreg.f	pktrms.f   shhmgd.f   trd1e.f \
ascm13.f  drwchr.f  gigtkg.f  mce1a.f	pktrpl.f   shlsts.f   trd.f \
asdmap.f  ds1a.f    ginofl.f  mce1b.f	pktrq2.f   shpsts.f   tree.f \
aspro.f   ds1b.f    gipsst.f  mce1c.f	pktrqd.f   shsetd.f   trht1a.f \
asycon.f  ds1etd.f  givens.f  mce1d.f	pla1.f	   shsets.f   trht1b.f \
ateig.f   ds1.f     gkad1a.f  mce1.f	pla2.f	   shstns.f   trht1c.f \
autock.f  dschk.f   gkad1c.f  mce2.f	pla31.f    shstss.f   trht.f \
autosv.f  dshear.f  gkad.f    mcone.f	pla32.f    shstts.f   tria3d.f \
axis10.f  dsmg1.f   gkam1a.f  mdumx.f	pla3.f	   shtrmd.f   tria3s.f \
axis.f	  dsmg2.f   gkam1b.f  melbow.f	pla41.f    shxtrs.f   triaad.f \
axloop.f  dstroy.f  gkam.f    merge1.f	pla42.f    sihex1.f   triaax.f \
bandit.f  dtranp.f  gmmatc.f  merged.f	pla4bd.f   sihex2.f   tridi1.f \
bard.f	  dtrbsc.f  gmmatd.f  merge.f	pla4b.f    sinc0s1.f  tridi.f \
bar.f	  dtria.f   gmmats.f  mesage.f	pla4.f	   sinc0s.f   trif.f \
bars.f	  dtrmem.f  gmmerg.f  mflud2.f	plamat.f   sjump.f    trimem.f \
basglb.f  dtshld.f  gmprtn.f  mflud3.f	plbar1.f   skpfrm.f   triqd.f \
bdat01.f  dtshls.f  gnfist.f  mflud4.f	pload1.f   skprec.f   trlga.f \
bdat02.f  dumerg.f  go.f      mfree.f	pload3.f   sma1a.f    trlgb.f \
bdat03.f  dumod1.f  gopen.f   mindeg.f	pload4.f   sma1bd.f   trlgc.f \
bdat04.f  dumod2.f  gp1.f     mintrp.f	pload.f    sma1b.f    trlgd.f \
bdat05.f  dumod3.f  gp2.f     mma101.f	ploadx.f   sma1.f     trlg.f \
bdat06.f  dumod4.f  gp3a.f    mma102.f	ploapf.f   sma2a.f    trmemd.f \
betrns.f  dumod5.f  gp3bd.f   mma103.f	plod4d.f   sma2bd.f   trmems.f \
bfsmat.f  dumper.f  gp3b.f    mma104.f	plod4s.f   sma2b.f    trnsp.f \
bgrid.f   dumx.f    gp3c.f    mma111.f	plotbd.f   sma2.f     trnsps.f \
bint.f	  dupart.f  gp3d.f    mma112.f	plot.f	   sma3a.f    trplmd.f \
biotsv.f  dvectr.f  gp3.f     mma113.f	pltmrg.f   sma3b.f    trplms.f \
bishel.f  dvmag.f   gp4.f     mma114.f	pltopr.f   sma3c.f    trplt.f \
bislc2.f  dypz.f    gp4prt.f  mma1.f	pltset.f   sma3.f     trttem.f \
bisloc.f  dzpy.f    gp4sp.f   mma201.f	plttra.f   smc2cd.f   tshear.f \
bitpat.f  dzy.f     gpcyc.f   mma202.f	pnm.f	   smc2cs.f   tspl1d.f \
bmg.f	  dzymat.f  gpfdr.f   mma203.f	polypt.f   smc2rd.f   tspl1s.f \
bmgtns.f  eadd.f    gpstg.f   mma204.f	prefix.f   smc2rs.f   tspl2d.f \
border.f  eandm.f   gpstgn.f  mma211.f	preloc.f   smcccd.f   tspl2s.f \
bound.f   ectloc.f  gpstgs.f  mma212.f	premat.f   smcccs.f   tspl3d.f \
bread.f   edit.f    gptabd.f  mma213.f	presax.f   smccrd.f   tspl3s.f \
bseqgp.f  edtl.f    gptlbl.f  mma214.f	pretab.f   smccrs.f   ttlpge.f \
btstrp.f  egnvct.f  gptsym.f  mma2.f	pretrd.f   smcdmp1.f  ttordr.f \
bug.f	  eject.f   gpwg1a.f  mma301.f	pretrs.f   smcdmp.f   ttrapr.f \
calcv.f   ektrmd.f  gpwg1b.f  mma302.f	print.f    smchlp.f   ttrirg.f \
case.f	  ektrms.f  gpwg1c.f  mma303.f	proces.f   smcomp.f   tubed.f \
casege.f  elelbl.f  gpwg.f    mma304.f	procom.f   smcout.f   tubes.f \
cdcmpd.f  elim.f    grav.f    mma311.f	prolat.f   smcph1.f   tvor.f \
cdcmps.f  em1d.f    gravl1.f  mma312.f	prompt.f   smcph2.f   twistd.f \
cdcomp.f  em2d.f    gravl2.f  mma313.f	prtint.f   smcrtr.f   twists.f \
cdetm2.f  em3d.f    gravl3.f  mma314.f	prtmsg.f   smcspl.f   type10.f \
cdetm.f   ema1d.f   grbvec.f  mma321.f	prtprm.f   smleig1.f  typflt.f \
cdifbs.f  ema1.f    gridip.f  mma322.f	psbar.f    smleig.f   typint.f \
cdivid.f  ema1s.f   gtmat1.f  mma323.f	psqad1.f   smmats.f   umfzdd.f \
cdtfbs.f  emadtq.f  gust1.f   mma324.f	psqad2.f   smp1.f     unpscr.f \
cead1a.f  ema.f     gust2.f   mma3.f	psqdm1.f   smp2.f     upart.f \
cead.f	  emastq.f  gust3.f   mma401.f	psqdm.f    smpyad.f   upcase.f \
centre.f  emfld.f   gust.f    mma402.f	psqpl1.f   smsg.f     usrmsg.f \
cf1fbs.f  emg1b.f   hbdyd.f   mma403.f	psrod.f    snpdf.f    valvec.f \
cf1ort.f  emgcng.f  hbdy.f    mma404.f	psta.f	   sofcls.f   varian.f \
cf2fbs.f  emgcor.f  hbdys.f   mma411.f	pstamg.f   sofi.f     vdra.f \
cf2ort.f  emg.f     hccom.f   mma412.f	pstpl1.f   sofint.f   vdrbd.f \
cfactr.f  emgfin.f  hdchk.f   mma413.f	pstq1.f    sofo.f     vdrb.f \
cfbsor.f  emgold.f  hdcoef.f  mma414.f	pstq2.f    sofopn.f   vdr.f \
cfe1ao.f  emgout.f  hdlin.f   mma4.f	pstrb1.f   sofsiz.f   vec.f \
cfe1my.f  emgpro.f  hdplot.f  mma.f	pstri1.f   softoc.f   vecprt.f \
cfe2ao.f  emgtab.f  hdplt.f   mmarc1.f	pstri2.f   softrl.f   viscd.f \
cfe2my.f  empcor.f  hdsket.f  mmarc2.f	pstrm1.f   sofut.f    viscs.f \
cfeer1.f  emsg.f    hdsolv.f  mmarc3.f	pstrm.f    solid.f    wavey.f \
cfeer2.f  encode.f  hdstat.f  mmarc4.f	pstrq2.f   solve1.f   wilvec1.f \
cfeer3.f  endsys.f  hdstus.f  mmarm1.f	pthbdy.f   solve.f    wilvec.f \
cfeer4.f  eqmcka.f  hdsurf.f  mmarm2.f	ptintr.f   solver.f   wplt10.f \
cfeer.f   eqmck.f   hdvs1.f   mmarm3.f	pull.f	   sortdg.f   wrtmsg.f \
cfer3d.f  eqmckm.f  hdvsr.f   mmarm4.f	push.f	   sort.f     wrtprt.f \
cfer3s.f  eqmcks.f  head.f    modac1.f	q2bcd.f    sorti.f    wrttrl.f \
cfnor1.f  eqout1.f  hess1.f   modac2.f	q2bcs.f    spanl1.f   xcei.f \
cfnor2.f  eqscod.f  hess2.f   modacc.f	q2trmd.f   spanl2.f   xchk.f \
chkopn.f  eqsout.f  hmat.f    moda.f	q2trms.f   splt10.f   xclean.f \
cidck.f   errmkn.f  hring.f   modb.f	q4bmgd.f   sptchk.f   xcsa.f \
cifsdd.f  errtrc.f  hsbg.f    modc.f	q4bmgs.f   sqdm11.f   xdcode.f \
cinfbs.f  estmag.f  iapd.f    mplprt.f	q4gmgs.f   sqdm12.f   xdph.f \
cinvp1.f  etrbkd.f  idf1.f    mpy3a.f	q4nrms.f   sqdm21.f   xfadj1.f \
cinvp2.f  etrbks.f  idf2.f    mpy3b.f	q4shps.f   sqdm22.f   xfldef.f \
cinvp3.f  etrbmd.f  idist.f   mpy3c.f	qdmem.f    sqdme1.f   xflord.f \
cinvpr.f  etrbms.f  idplot.f  mpy3dr.f	qdmm1d.f   sqdpl1.f   xflszd.f \
clstab.f  exi2.f    ifb2ar.f  mpy3.f	qdmm1.f    sqrtm.f    xgpibs.f \
clvec.f   exio1.f   ifp1b.f   mpy3ic.f	qdmm1s.f   squd41.f   xgpidd.f \
cmauto.f  exio2.f   ifp1c.f   mpy3nu.f	qdmm1x.f   squd42.f   xgpidg.f \
cmcase.f  exiobd.f  ifp1d.f   mpy3oc.f	qdmm2d.f   srod1.f    xgpi.f \
cmckcd.f  exio.f    ifp1e.f   mpy3p.f	qdmm2.f    srod2.f    xgpimw.f \
cmckdf.f  exlvl.f   ifp1.f    mpy4t.f	qdmm2s.f   ss2d81.f   xipfl.f \
cmcomb.f  exo2.f    ifp1f.f   mpya3d.f	qdplt.f    ss2d82.f   xlnkdd.f \
cmcont.f  extern.f  ifp1g.f   mpyad.f	qhbdy.f    ssg1a.f    xlnkhd.f \
cmdisc.f  f6211.f   ifp1h.f   mpyado.f	qloadl.f   ssg1.f     xmpldd.f \
cmhgen.f  f89.f     ifp1pc.f  mpydri.f	qparam.f   ssg2a.f    xosgen.f \
cmiwrt.f  fa1.f     ifp1s.f   mpyl.f	qparmd.f   ssg2b.f    xparam.f \
cmmcon.f  fa1ke.f   ifp1xy.f  mpyq.f	qparmr.f   ssg2c.f    xpolck.f \
cmrd2a.f  fa1k.f    ifp3bd.f  mqdplt.f	qriter1.f  ssg2.f     xpunp.f \
cmrd2b.f  fa1pka.f  ifp3b.f   mred1a.f	qriter.f   ssg3a.f    xpurge.f \
cmrd2c.f  fa1pke.f  ifp3.f    mred1b.f	quad4d.f   ssg3.f     xrcard.f \
cmrd2d.f  fa1pki.f  ifp4b.f   mred1c.f	quad4s.f   ssg4.f     xread.f \
cmrd2e.f  fa1pkv.f  ifp4c.f   mred1d.f	qvol.f	   ssgetd.f   xrecps.f \
cmrd2.f   fa2.f     ifp4e.f   mred1e.f	rand1.f    ssght1.f   xrgdcf.f \
cmrd2f.f  factor.f  ifp4.f    mred1.f	rand2.f    ssght2.f   xrgdev.f \
cmrd2g.f  factru.f  ifp4f.f   mred2a.f	rand3.f    ssght.f    xrgdfm.f \
cmrels.f  failrs.f  ifp4g.f   mred2b.f	rand5.f    ssghtp.f   xrgdtb.f \
cmsfil.f  failur.f  ifp5a.f   mred2c.f	rand6.f    ssgkhi.f   xrgdtp.f \
cmsofo.f  fbs1.f    ifp5.f    mred2d.f	rand7.f    ssgslt.f   xrgnum.f \
cmtimu.f  fbs21.f   ifpdco.f  mred2e.f	rand8.f    sslot1.f   xrgsst.f \
cmtoc.f   fbs2.f    ifp.f     mred2.f	random.f   sslot2.f   xrgsub.f \
cmtrce.f  fbs3.f    ifpmdc.f  mred2f.f	rbmg1.f    ssold1.f   xsave.f \
cnorm1.f  fbs4.f    ifppar.f  mred2g.f	rbmg2.f    ssold2.f   xscndm.f \
cnorm.f   fbs.f     ifppvc.f  mred2h.f	rbmg3.f    ssplin.f   xsem00.f \
cnstdd.f  fbsf.f    ifs1p.f   mred2i.f	rbmg4.f    sswtch.f   xsfadd.f \
cnstrc.f  fbsi1.f   ifs2p.f   mred2j.f	rcard2.f   stack.f    xsfa.f \
com12.f   fbsi2.f   ifs3p.f   mred2l.f	rcard.f    step2.f    xsort2.f \
comb1.f   fbsi3.f   ifs4p.f   mred2m.f	rcova.f    step.f     xsort.f \
comb2.f   fbsi4.f   ifs5p.f   mred2n.f	rcovb.f    stord1.f   xsosgn.f \
combin.f  fbsi.f    ifte2.f   mred2o.f	rcovc.f    stord2.f   xtrnsy.f \
combo.f   fbsint.f  ifte4.f   mred2p.f	rcovds.f   stpaic.f   xtrny1.f \
comect.f  fbsinv.f  ift.f     mrge.f	rcove.f    stpax1.f   xychar.f \
comugv.f  fbsrdm.f  iftg.f    mring.f	rcovem.f   stpax2.f   xydump.f \
cone.f	  fcurl.f   ifx1bd.f  msgwrt.f	rcovim.f   stpax3.f   xyfind.f \
conm1d.f  fdit.f    ifx2bd.f  mslot.f	rcovls.f   stpbg.f    xygraf.f \
conm1s.f  fdsub.f   ifx3bd.f  msolid.f	rcovms.f   stpbs0.f   xylog.f \
conm2d.f  fdvect.f  ifx4bd.f  mtimsu.f	rcovo.f    stpbs1.f   xyout.f \
conm2s.f  feer1.f   ifx5bd.f  mtmsu1.f	rcovqv.f   stpda.f    xyplot.f \
conmsg.f  feer2.f   ifx6bd.f  mtrapr.f	rcovr3.f   stpk.f     xyprpl.f \
contor.f  feer3.f   ifx7bd.f  mtrbsc.f	rcovr.f    stplot.f   xyprpt.f \
copy.f	  feer3x.f  ihexd.f   mtriqd.f	rcovsl.f   stpphi.f   xytics.f \
cpyfil.f  feer4.f   ihex.f    mtrirg.f	rcovss.f   stppt2.f   xytran.f \
cpystr.f  feerdd.f  ihexsd.f  mtrplt.f	rcovui.f   stqme2.f   yrcard.f \
crdrd2.f  feer.f    ihexs.f   mtrxi.f	rcovuo.f   strap1.f   zeroc.f \
crdrd.f   ferfbs.f  ihexss.f  mtrxin.f	rcovva.f   strap2.f   zj.f \
create.f  ferltd.f  incore.f  mtrxo.f	rdmodx.f   strax1.f \
criggp.f  ferlts.f  incro.f   mxcid.f	re2al.f    strax2.f

libnastran_a_LIBADD = ../bd/libnastbd.a
